@@ -45,6 +45,7 @@ Location data and Map viewer support - Initial design:
 
 General TODOs:
 --------------
+- Closing dialog with Escape key doesn't work when a JXDatePicker has the focus
 - "Copy exercise" feature, see request:
   https://sourceforge.net/tracker/?func=detail&aid=2927194&group_id=133110&atid=726273
 - Exercise Dialog (and all others): use JFormatedTextField for entering
