@@ -8,6 +8,7 @@ import de.saring.sportstracker.data.SportSubType;
 import de.saring.sportstracker.data.SportType;
 import de.saring.sportstracker.gui.STContext;
 import de.saring.sportstracker.gui.STDocument;
+import de.saring.util.gui.DialogUtils;
 
 import java.awt.event.ActionEvent;
 import java.awt.event.ActionListener;
@@ -79,7 +80,10 @@ public class FilterDialog extends JDialog {
         btCurrentYear.setAction (actionMap.get (ACTION_CURRENT_YEAR));
         btAllTime.setAction (actionMap.get (ACTION_ALL_TIME));
         btOK.setAction (actionMap.get (ACTION_OK));
-        btCancel.setAction (actionMap.get (ACTION_CANCEL));
+        
+        javax.swing.Action aCancel = actionMap.get(ACTION_CANCEL);
+        btCancel.setAction(aCancel);
+        DialogUtils.setDialogEscapeKeyAction(this, aCancel);
 
         // fill the comoboxes with all sport types and intensity types
         cbSportType.removeAllItems ();
